--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,3 @@
-@charset "UTF-8";
-
 /* CSS Document */
 html, body
 {
@@ -72,7 +70,7 @@ body { width: 355px; }
 #name
 {
 	display: inline-block;
-	font-family: "Montserrat";
+	font-family: 'Montserrat', sans-serif;
 	color: #30363d;
 	font-size: 0.75em;
 	margin-left: 20px;
@@ -84,7 +82,7 @@ body { width: 355px; }
 	position: absolute;
 	left: 85px;
 	top: 36px;
-	font-family: "Montserrat";
+	font-family: 'Montserrat', sans-serif;
 	color: #30363d;
 	font-size: 0.75em;
 	margin-left: 20px;
@@ -93,7 +91,7 @@ body { width: 355px; }
 #viewlink
 {
 	display: inline-block;
-	font-family: "Montserrat";
+	font-family: 'Montserrat', sans-serif;
 	color: #56c5ee;
 	font-size: 0.75em;
 	margin-left: 12px;
@@ -102,7 +100,7 @@ body { width: 355px; }
 
 #userstat
 {
-	font-family: "Montserrat";
+	font-family: 'Montserrat', sans-serif;
 	color: #979fa9;
 	font-size: 0.75em;
 	position: absolute;
@@ -132,7 +130,7 @@ body { width: 355px; }
 	position:absolute;
 	left:175px;
 	top:35px;
-	font-family:Open Sans;
+	font-family:'Montserrat', sans-serif;
 	color:#b6c4cd;
 	font-size:0.75em;
 	margin-left:20px;
@@ -142,9 +140,10 @@ body { width: 355px; }
 	position:absolute;
 	left:85px;
 	top:60px;
-	font-family:Open Sans;
+	font-family:'Montserrat', sans-serif;
 	color:#919ba9;
 	font-size:0.70em;
+	line-height: 1.3em;
 	margin-left:20px;
 }
 
@@ -210,7 +209,7 @@ ul li {
 }
 #msgdate {
 	position:absolute;
-	font-family:Open Sans;
+	font-family:'Montserrat', sans-serif;
 	font-size:0.625em;
 	color:#777f84;
 	left:5px;
@@ -242,9 +241,10 @@ ul li {
 	padding-bottom:8px;
 	margin-left:20px;
 	margin-right:18px;
-	font-family:Open Sans;
+	font-family:'Montserrat', sans-serif;
 	font-size:0.8em;
 	color:#4f595f;
+	line-height: 1.3em;
 }
 
 #firstpersontriangle {
@@ -268,7 +268,7 @@ ul li {
 	     outline: none;
 	     width:250px;
 	     overflow:hidden;
-	     font-family: Open Sans;
+	     font-family: 'Montserrat', sans-serif;
 	     color:#738295;
 	     font-size:0.8em;
      }
@@ -353,7 +353,7 @@ ul li {
 	height:auto;
 	background-color:#8794a4;
 	border-radius:10px;
-	font-family:Open Sans;
+	font-family:'Montserrat', sans-serif;
 	color:#fff;
 	font-size:0.8em;
 }
